# rules_docs

./: .gitattributes  .gitignore  .pre-commit-config.yaml  BUILD.bazel  CONTRIBUTING.md  MODULE.bazel  README.md  mkdocs.tpl.yaml  renovate.json  requirements.in  requirements.txt
.bcr/: metadata.template.json  source.template.json
.devcontainer/: devcontainer.json
.github/workflows/: ci.bazelrc  ci.yaml  docs-tags.yaml  docs.yaml  publish.yaml  release-tags.yaml  release.yaml  release_prep.sh
docgen/: BUILD.bazel  defs.bzl  docs.bzl  extensions.bzl  repositories.bzl  toolchain.bzl
docgen/private/: BUILD.bazel  docs.bzl  docs_action.bzl  docs_add_last_updated.bzl  docs_index.bzl  docs_link.bzl  git_last_updated_timestamps.bzl  markdown.bzl  markdown_action.bzl  markdown_add_last_updated.bzl  mkdocs_build.bzl  mkdocs_config.bzl  mkdocs_serve.bzl  platforms.bzl  providers.bzl  resolved_toolchain.bzl  toolchains_repo.bzl  utils.bzl
docgen/private/sh/: BUILD.bazel  docs_add_last_updated.ps1.tpl  docs_add_last_updated.sh.tpl  git-last-updated-timestamps.bat  git-last-updated-timestamps.ps1  git-last-updated-timestamps.sh  markdown_add_last_updated.ps1.tpl  markdown_add_last_updated.sh.tpl
docgen/tests/: versions_test.bzl
e2e/git_last_updated/: BUILD.bazel  MODULE.bazel  README.md  WORKSPACE.bazel  git-last-updated-timestamps.sh  golden-last_updated.json  mkdocs.tpl.yaml  requirements.in  requirements.txt
e2e/git_last_updated/git_test/: index
e2e/git_last_updated/git_test/logs/refs/heads/: master
e2e/git_last_updated/golden-docs/docs/_bazel_docs/: README.md
e2e/git_last_updated/golden-test_docs/test_docs/_bazel_docs/: test.md
e2e/smoke/: BUILD  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE.bazel  mkdocs.tpl.yaml  requirements.txt
e2e/smoke/git_test/: COMMIT_EDITMSG
e2e/smoke/git_test/logs/refs/heads/: master
e2e/smoke/git_test/refs/heads/: master
e2e/smoke/golden-test_docs/: README.md  README_TEST.md  other-info-2.md  other-info.md
examples/swagger/: BUILD  MODULE.bazel  README.md  api-reference.md  mkdocs.tpl.yaml  openapi.yaml  pyproject.toml  requirements.txt
examples/typescript/: .bazelrc  .vale.ini  BUILD  MODULE.aspect  MODULE.bazel  README.md  package.json  pnpm-lock.yaml  tsconfig.json  typedoc.json
examples/typescript/src/taskmanager/: InMemoryTaskService.ts  Task.ts  TaskPriority.ts  TaskService.ts  TaskStatus.ts  index.ts
examples/typescript/tools/lint/: BUILD  linters.bzl
tools/: BUILD.bazel  rules_multitool.pr115.patch  tools.lock.json
