load("@bazel_gazelle//:def.bzl", "gazelle", "gazelle_binary")
load("@buildifier_prebuilt//:rules.bzl", "buildifier")
load("@mkdocs//:defs.bzl", "mkdocs_build", "mkdocs_config", "mkdocs_serve")
load("@package_metadata//licenses/rules:license.bzl", "license")
load("@package_metadata//purl:purl.bzl", "purl")
load("@package_metadata//rules:package_metadata.bzl", "package_metadata")
load("@rules_python//python:pip.bzl", "compile_pip_requirements")
load("//docgen:defs.bzl", "docs", "docs_index", "git_last_updated_timestamps", "markdown_add_last_updated")

compile_pip_requirements(
    name = "requirements",
    src = "requirements.in",
    requirements_txt = "requirements.txt",
)

buildifier(
    name = "buildifier.fix",
    exclude_patterns = ["./.git/*"],
    lint_mode = "warn",
    mode = "fix",
)

alias(
    name = "format",
    actual = ":buildifier.fix",
)

package_metadata(
    name = "package_metadata",
    purl = purl.bazel(
        module_name(),
        module_version(),
    ),
    visibility = ["//visibility:public"],
)

license(
    name = "license",
    kind = "@package_metadata//licenses/spdx:Apache-2.0",
    text = "LICENSE",
)

# gazelle:map_kind bzl_library bzl_library @bazel_lib//:bzl_library.bzl
gazelle_binary(
    name = "gazelle_bin",
    languages = ["@bazel_skylib_gazelle_plugin//bzl"],
)

gazelle(
    name = "gazelle",
    gazelle = "gazelle_bin",
)

git_last_updated_timestamps(
    name = "git_last_updated_timestamps",
    srcs = glob(
        [".git/**"],
        allow_empty = True,
    ),
    out = "last_updated.json",
)

docs_index(
    name = "examples_docs_index",
    srcs = [
        "@rules_docs_e2e_git_last_updated//:docs",
        "@rules_docs_e2e_smoke//:docs",
        "@rules_docs_examples_typescript//:index",
    ],
    nav = {
        "@rules_docs_e2e_smoke//:docs": "e2e/smoke",
        "@rules_docs_e2e_git_last_updated//:docs": "e2e/git_last_updated",
        "@rules_docs_examples_typescript//:index": "examples/typescript",
    },
    title = "examples",
)

docs(
    name = "docs",
    srcs = [
        "requirements.txt",
        ":examples_docs_index",
        "//docgen:docs",
    ],
    nav = {
        "README.md": "README",
        "//docgen:docs": "rules",
        ":examples_docs_index": "examples",
    },
)

markdown_add_last_updated(
    name = "docs_last_updated",
    docs = ":docs",
    last_updated_json = ":git_last_updated_timestamps",
    out_dir = "last_updated_docs",
)

mkdocs_config(
    name = "mkdocs_config",
    docs = ":docs_last_updated",
    mkdocs_base = "mkdocs.tpl.yaml",
)

mkdocs_build(
    name = "mkdocs",
    config = ":mkdocs_config",
    docs = [":docs_last_updated"],
)

# Serve the docs locally for development. Recommended to run with ibazel to auto-reload on changes.
mkdocs_serve(
    name = "mkdocs.serve",
    config = ":mkdocs_config",
    docs = [":docs_last_updated"],
)
