load("@bazel_lib//:bzl_library.bzl", "bzl_library")
load("@stardoc//stardoc:stardoc.bzl", "stardoc")
load("//docgen:defs.bzl", "docs")

bzl_library(
    name = "repositories",
    srcs = ["repositories.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "@bazel_tools//tools/build_defs/repo:cache.bzl",
        "@bazel_tools//tools/build_defs/repo:http.bzl",
        "@bazel_tools//tools/build_defs/repo:utils.bzl",
    ],
)

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//docgen/private:docs",
        "//docgen/private:docs_action",
        "//docgen/private:docs_index",
        "//docgen/private:docs_link",
        "//docgen/private:git_last_updated_timestamps",
        "//docgen/private:markdown_action",
        "//docgen/private:markdown_add_last_updated",
        "//docgen/private:mkdocs_build",
        "//docgen/private:mkdocs_config",
        "//docgen/private:mkdocs_serve",
        "//docgen/private:providers",
    ],
)

bzl_library(
    name = "extensions",
    srcs = ["extensions.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        ":repositories",
        "@bazel_tools//tools/build_defs/repo:cache.bzl",
    ],
)

stardoc(
    name = "defs_md",
    out = "defs.md",
    header_template = "//tools:header.vm",
    input = "defs.bzl",
    deps = [":defs"],
)

stardoc(
    name = "extensions_md",
    out = "extensions.md",
    header_template = "//tools:header.vm",
    input = "extensions.bzl",
    deps = [":extensions"],
)

stardoc(
    name = "repositories_md",
    out = "repositories.md",
    header_template = "//tools:header.vm",
    input = "repositories.bzl",
    deps = [":repositories"],
)

docs(
    name = "docs",
    nav = {
        ":defs.md": "@rules_docs//docgen:defs.bzl",
        ":extensions.md": "@rules_docs//docgen:extensions.bzl",
        ":repositories.md": "@rules_docs//docgen:repositories.bzl",
    },
    visibility = ["//visibility:public"],
)
