load("@bazel_env.bzl", "bazel_env")
load("@bazelrc-preset.bzl", "bazelrc_preset")
load("@multitool//:tools.bzl", "TOOLS")

bazelrc_preset(
    name = "preset",
    doc_link_template = "https://registry.build/flag/bazel?filter={flag}",
)

bazel_env(
    name = "bazel_env",
    tools = TOOLS,
)

exports_files(
    [
        "header.vm",
    ],
    visibility = ["//visibility:public"],
)
