load("@bazel_lib//:bzl_library.bzl", "bzl_library")
load("@stardoc//stardoc:stardoc.bzl", "stardoc")
load("//docgen:defs.bzl", "docs")

bzl_library(
    name = "docs",
    srcs = ["docs.bzl"],
    visibility = ["//docgen:__pkg__"],
    deps = [
        ":docs_action",
        ":utils",
        "@bazel_lib//lib:utils",
        "@bazel_skylib//rules:build_test",
    ],
)

bzl_library(
    name = "docs_add_last_updated",
    srcs = ["docs_add_last_updated.bzl"],
    visibility = ["//docgen:__pkg__"],
    deps = [
        ":providers",
        ":utils",
    ],
)

bzl_library(
    name = "git_last_updated_timestamps",
    srcs = ["git_last_updated_timestamps.bzl"],
    visibility = ["//docgen:__pkg__"],
    deps = [
        "@bazel_lib//lib:run_binary",
    ],
)

bzl_library(
    name = "mkdocs_build",
    srcs = ["mkdocs_build.bzl"],
    visibility = ["//docgen:__pkg__"],
    deps = [
        ":providers",
    ],
)

bzl_library(
    name = "mkdocs_config",
    srcs = ["mkdocs_config.bzl"],
    visibility = ["//docgen:__pkg__"],
    deps = [
        ":providers",
        ":utils",
    ],
)

bzl_library(
    name = "providers",
    srcs = ["providers.bzl"],
    visibility = ["//docgen/private:__subpackages__"],
)

bzl_library(
    name = "utils",
    srcs = ["utils.bzl"],
    visibility = ["//docgen/private:__subpackages__"],
    deps = [
        "@bazel_lib//lib:copy_to_directory",
    ],
)

bzl_library(
    name = "docs_action",
    srcs = ["docs_action.bzl"],
    visibility = ["//docgen/private:__subpackages__"],
    deps = [
        ":providers",
        "@bazel_lib//lib:copy_to_directory",
        "@bazel_lib//lib:paths",
    ],
)

stardoc(
    name = "docs_action_docs",
    out = "docs_action.md",
    input = "docs_action.bzl",
    deps = [":docs_action"],
)

docs(
    name = "docs_md",
    srcs = [":docs_action_docs"],
    nav = {
        ":docs_action.md": "docs_action",
    },
    visibility = ["//visibility:public"],
)
