load("@bazel_lib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "docs",
    srcs = ["docs.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        ":docs_action",
        ":utils",
        "@bazel_lib//lib:utils",
        "@bazel_skylib//rules:build_test",
    ],
)

bzl_library(
    name = "docs_index",
    srcs = ["docs_index.bzl"],
    visibility = ["//docgen:__pkg__"],
    deps = [
        ":docs",
        ":utils",
        "@bazel_lib//lib:utils",
        "@bazel_skylib//rules:build_test",
    ],
)

bzl_library(
    name = "docs_link",
    srcs = ["docs_link.bzl"],
    visibility = ["//docgen:__pkg__"],
    deps = [
        ":providers",
        "@bazel_lib//lib:utils",
        "@bazel_skylib//rules:build_test",
    ],
)

bzl_library(
    name = "docs_add_last_updated",
    srcs = ["docs_add_last_updated.bzl"],
    visibility = ["//docgen:__pkg__"],
    deps = [
        ":providers",
        ":utils",
    ],
)

bzl_library(
    name = "git_last_updated_timestamps",
    srcs = ["git_last_updated_timestamps.bzl"],
    visibility = ["//docgen:__pkg__"],
    deps = [
        "@bazel_lib//lib:run_binary",
    ],
)

bzl_library(
    name = "mkdocs_build",
    srcs = ["mkdocs_build.bzl"],
    visibility = ["//docgen:__pkg__"],
    deps = [
        ":providers",
        ":utils",
    ],
)

bzl_library(
    name = "mkdocs_serve",
    srcs = ["mkdocs_serve.bzl"],
    visibility = ["//docgen:__pkg__"],
    deps = [
        ":providers",
        ":utils",
    ],
)

bzl_library(
    name = "mkdocs_config",
    srcs = ["mkdocs_config.bzl"],
    visibility = ["//docgen:__pkg__"],
    deps = [
        ":providers",
        ":utils",
    ],
)

bzl_library(
    name = "providers",
    srcs = ["providers.bzl"],
    visibility = ["//docgen/private:__subpackages__"],
)

bzl_library(
    name = "utils",
    srcs = ["utils.bzl"],
    visibility = ["//docgen/private:__subpackages__"],
    deps = [
        "@bazel_lib//lib:copy_to_directory",
    ],
)

bzl_library(
    name = "docs_action",
    srcs = ["docs_action.bzl"],
    visibility = [
        "//docgen:__pkg__",
        "//docgen/private:__subpackages__",
    ],
    deps = [
        ":providers",
        "@bazel_lib//lib:copy_to_directory",
        "@bazel_lib//lib:paths",
    ],
)

exports_files(
    [
        "docs.bzl",
    ],
    visibility = ["//visibility:public"],
)
