"""Tests for git_last_updated_timestamps rule."""

load("@jacobshirley_rules_docgen//docgen:defs.bzl", "docs", "docs_add_last_updated", "git_last_updated_timestamps")
load("@bazel_lib//lib:diff_test.bzl", "diff_test")

docs(
    name = "docs",
)

git_last_updated_timestamps(
    name = "git_last_updated_timestamps",
    git_dir = "git_test",
    out = "last_updated.json",
    visibility = ["//visibility:public"],
)

docs_add_last_updated(
    name = "docs_with_last_updated",
    last_updated_json = ":git_last_updated_timestamps",
    out_dir = "last_updated_docs",
    docs = ":docs",
    visibility = ["//visibility:public"],
)

diff_test(
    name = "diff_test_docs_with_last_updated",
    file1 = ":git_last_updated_timestamps",
    file2 = "golden-last_updated.json",
)


diff_test(
    name = "diff_test_readme_last_updated",
    file1 = ":docs_with_last_updated",
    file2 = "golden-docs"
)
