"""Tests for git_last_updated_timestamps rule."""

load("@bazel_lib//lib:diff_test.bzl", "diff_test")
load("@rules_docs//docgen:defs.bzl", "docs", "git_last_updated_timestamps", "markdown_add_last_updated")

docs(
    name = "docs",
    srcs = ["README.md"],
    visibility = ["//visibility:public"],
)

docs(
    name = "test_docs",
    srcs = ["test.md"],
    entrypoint = "test.md",
    visibility = ["//visibility:public"],
)

git_last_updated_timestamps(
    name = "git_last_updated_timestamps",
    srcs = glob(["git_test/**"]),
    out = "last_updated.json",
    git_dir = "git_test",
)

diff_test(
    name = "diff_git_timestamps",
    file1 = ":git_last_updated_timestamps",
    file2 = "golden-last_updated.json",
)

markdown_add_last_updated(
    name = "docs_with_last_updated",
    docs = ":test_docs",
    last_updated_json = ":git_last_updated_timestamps",
    out_dir = "last_updated_docs",
)

diff_test(
    name = "diff_test_readme_last_updated",
    file1 = ":docs_with_last_updated",
    file2 = "golden-test_docs",
)
