"""Provides a simple way to test your rules as an external workspace.
Add a basic smoke-test target below.
"""

load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@jacobshirley_rules_docgen//docgen:defs.bzl", "docs", "docs_index", "docs_link")
load("@mkdocs//:defs.bzl", "mkdocs_build", "mkdocs_config", "mkdocs_serve")

docs_link(
    name = "docs_link",
    title = "Test Link",
    url = "https://example.com",
    visibility = ["//visibility:public"],
)

docs(
    name = "other_docs",
    entry = "other-info-2.md",
    readme_content = "This is some other documentation content.",
)

docs_index(
    name = "sub_nav",
    nav = {
        ":docs_link": "External Link",  # Custom link text.
        "other-info.md": "Other Info",  # Link to a local markdown file.
        ":other_docs": "Other Docs",  # Link to another docs target.
    },
    title = "Sub Navigation",
)

docs(
    name = "docs",
    nav = {
        "README.md": "Home",  # Link to the main README file.
        ":docs_link": "External Link",  # Custom link text.
        "other-info.md": "Other Info",  # Link to a local markdown file.
        ":other_docs": "Other Docs",  # Link to another docs target.
        ":sub_nav": "",  # Will use the title as the link text.
    },
    # Add headers to the documentation site here.
    readme_header_links = {
        ":docs_link": "",  # Will use the title as the link text.
    },
)

mkdocs_config(
    name = "mkdocs_config",
    docs = ":docs",
    mkdocs_base = "mkdocs.tpl.yaml",
)

mkdocs_build(
    name = "mkdocs",
    config = ":mkdocs_config",
    docs = [":docs"],
    site_dir = "site",
    visibility = ["//visibility:public"],
)

build_test(
    name = "smoke_test",
    size = "small",
    targets = [":mkdocs"],
)

# Serve the docs locally for development. Recommended to run with ibazel to auto-reload on changes.
mkdocs_serve(
    name = "mkdocs.serve",
    config = ":mkdocs_config",
    docs = [":docs"],
    visibility = ["//visibility:public"],
)
