bazel_dep(name = "jacobshirley_rules_docgen", version = "0.0.0", dev_dependency = True)
bazel_dep(name = "bazel_skylib", version = "1.8.2", dev_dependency = True)

local_path_override(
    module_name = "jacobshirley_rules_docgen",
    path = "../..",
)

docgen = use_extension("@jacobshirley_rules_docgen//docgen:extensions.bzl", "docgen", dev_dependency = True)
docgen.mkdocs(
    mkdocs_version = "1.0.2",
)
