module(
    name = "rules_docgen_e2e_smoke",
)

bazel_dep(name = "rules_docgen", version = "0.0.0")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "bazel_lib", version = "3.0.0")

local_path_override(
    module_name = "rules_docgen",
    path = "../..",
)

bazel_dep(name = "rules_python", version = "1.7.0")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pypi",
    python_version = "3.11",
    requirements_lock = "//:requirements.txt",
)
use_repo(pip, "pypi")

docgen = use_extension("@rules_docgen//docgen:extensions.bzl", "docgen")
docgen.mkdocs(
    # These must be defined in the requirements.txt
    plugins = [
        "mkdocs-glightbox",
        "mkdocs-material",
        "mkdocs-table-reader-plugin",
    ],
    pypi_hub = "@pypi",
)
use_repo(docgen, "mkdocs")
