# Override http_archive for local testing
local_repository(
    name = "jacobshirley_rules_docgen",
    path = "../..",
)

#---SNIP--- Below here is re-used in the workspace snippet published on releases

######################
# rules_docgen setup #
######################
# Fetches the rules_docgen dependencies.
# If you want to have a different version of some dependency,
# you should fetch it *before* calling this.
# Alternatively, you can skip calling this function, so long as you've
# already fetched all the dependencies.
load("@jacobshirley_rules_docgen//docgen:repositories.bzl", "rules_docgen_dependencies")

rules_docgen_dependencies()
